# solana-university-hackathon

./: .gitignore  Anchor.toml  BUILD_AND_DEPLOY_OPTIONS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEVNET_DEPLOYMENT_STATUS.md  Dockerfile  FIXES_APPLIED.md  QUICK_START.md  README.md  README_DEPLOY.md  SETUP_GUIDE.md  build-wsl.sh  build_admin.ps1  build_docker.ps1  build_in_wsl.sh  build_output.txt  build_with_docker.sh  build_wsl.sh  deploy_workaround.ps1  install-platform-tools-admin.ps1  package.json  setup-admin-wallet.js
.github/workflows/: build-and-deploy.yml
app/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
app/public/: admin-wallet.json  logo-placeholder.txt
app/public/.well-known/: assetlinks.json
app/public/fonts/: README.md
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/idl/: keystore.json
app/src/lib/: api.ts  keystore-client.ts  keystore.ts  message.ts  passkey.ts  program-client.ts  secp256r1.ts
mobile/: App.tsx  package.json
mobile-app/: DEMO_GUIDE.md  README.md  VISUAL_GUIDE.md  WHAT_WE_BUILT.md  app.json  package-lock.json  package.json
mobile-app/lib/: api.ts  keystore.ts  message.ts  passkey.ts  solana.ts
programs/keystore/: Cargo.toml
programs/keystore/src/: error.rs  lib.rs  secp256r1.rs
programs/keystore/src/instructions/: add_key.rs  create.rs  execute.rs  register_credential.rs
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  message.ts  passkey.ts  secp256r1.ts  types.ts
(+14 files in other folders)
