[package]
name = "keystore"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "keystore"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
proc-macro2 = { version = "1.0.95"}

